# superccd

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build_macos.sh  build_rpi.sh  build_windows.cmd  deploy.bat  package_release.ps1  run_vs_setup.cmd
RawTherapee profile/: s3pro_dng.pp3
cmake/: macos-arm64.cmake  raspberrypi-aarch64.cmake
debian/: changelog  control  rules
docs/: MACOS_BUILD.md  MANUAL.md  RASPBERRYPI_BUILD.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.1.9.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.4.2.md  RELEASE_NOTES_v1.4.3.md  RELEASE_NOTES_v1.4.4.md
macos/: Info.plist
resources/: app_icon.rc  app_resources.qrc
resources/icons/: app_icon.icns
src/: AmazeDemosaic.cpp  AmazeDemosaic.h  CfaPlaneAlignment.cpp  CfaPlaneAlignment.h  DngWriter.cpp  DngWriter.h  ExposureToolsWindow.cpp  ExposureToolsWindow.h  HistogramWidget.cpp  HistogramWidget.h  MainWindow.cpp  MainWindow.h  ParallelProcessing.h  PreviewCanvas.cpp  PreviewCanvas.h  PreviewColorNormalization.cpp  PreviewColorNormalization.h  PreviewFalseColorSuppression.cpp  PreviewFalseColorSuppression.h  PreviewImageProcessing.cpp  PreviewImageProcessing.h  PreviewPixelCorrection.cpp  PreviewPixelCorrection.h  SuperCCDProcessor.cpp  SuperCCDProcessor.h  TransitionCurveWidget.cpp  TransitionCurveWidget.h  VectorscopeWidget.cpp  VectorscopeWidget.h  WaveformWidget.cpp  WaveformWidget.h  main.cpp
src/tests/: AmazeDemosaicTest.cpp  CfaPlaneAlignmentTest.cpp  MergeStartTest.cpp  ParallelProcessingTest.cpp  PreviewColorNormalizationTest.cpp  PreviewFalseColorProbe.cpp  PreviewRenderProbe.cpp
